source/potatoTheme.css
/*---------------------------------
         Background Display
---------------------------------*/

body {
    margin: 0;
    height: 100vh;
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 3em;
    overflow-x: hidden;
}

.themePotato {
    color: #333;
    background-color: #73d918;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.potatoWork {
    background-image: url("img/background.png");
}

.potatoBreak {
    background-image: url("img/background-break.png");
}

.themeDark {
    color: white;
    background-color: #333333;
    background-image: none;
}

.themeLight {
    color: #333;
    background-color: white;
    background-image: none;
}

p {
    margin-bottom: 0px;
}

.hidden {
    display: none;
}

.showing {
    display: block;
}
/*---------------------------------
         Main Page Display
---------------------------------*/
.contentWrapper {
    position: absolute;
    left: 0%;
    top: 0%;
    right: 0%;
    bottom: auto;
    height: inherit;
    /* border-style: dashed;
    border-color: red; */
}

#title {
    display: block;
    margin-top: 30px;
    margin-bottom: 18px;
    margin-left: 30px;
    /* text-shadow: 1px 1px 1px #000; */
    font-family: Georgia,serif;
    font-size: 20px;
    font-variant: small-caps; 
    text-transform: none; 
    font-weight: 100;
    float: left;
}

#phaseWrapper {
    display: flex;
    justify-content: center;
    width: 100%;
}

#phaseDisplay {
    display: inline-block;
    margin: auto;
    /* margin: 70px 0px 30px -140px; */
    text-shadow: 1px 1px 1px #000;
    font-size: 32px;
}

#settingsIcon {
    position: absolute;
    top: 3%;
    right: 5%;
    float : right;
}

@media screen and (max-width: 768px) {
    #settingsIcon {
        right: 5%
    }
}

#settingsIcon:hover {
    cursor: pointer;
}

#circleTimer {
    width: 150px;
    height: 150px;
    margin-top: 10px;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 10px;
    border-radius: 50%;
}

.circleLight {
    border: 8px solid black;
    background-color: white;
}

.circleDark {
    border: 8px solid white;
    background-color: #333;
}

.circlePotato {
    border: 8px solid #ff0;
    background-color: #ff0;
    box-shadow: 0 0 50px gold,0 0 150px gold;
}

.circlePotatoBreak {
    border: 8px solid rgb(134, 130, 120);
    background-color: rgb(134, 130, 120);
    box-shadow: 0 0 50px rgb(206, 190, 146),0 0 150px rgb(206, 190, 146);
}

#timerDisplay {
    margin:25px auto;
    padding: 26px 0px;
    font-size: 40px;
    text-shadow: 1px 1px 1px #000;
    font-weight: bold;
}

.buttonWrapper {
    margin-top: 50px;
}

.buttonWrapper button {
    display: inline-block;
    width: 150px;
    height: 75px;
    margin: auto;
    white-space: normal;
}

#enterTask {
    border-radius: 18px;
}

#taskAdder {
    margin-top: 20px;
    margin-bottom: 20px;
    font-size: 20px;
}

@media screen and (max-width: 479px) {
    .contentWrapper {
        margin: 0 0;
    }
    .buttonWrapper button {
        width: 100px;
        height: 50px;
    }
    .taskContainer {
        width: 100vw;
        text-align: left;
    }
    #enterTask {
        width: 60%;
    }
    #taskAdder {
        width: 100px;
        height: 50px;
    }
}

input[type="text"] {
    margin-top: 30px;
    height:30px;
    width: 300px;
}
/*---------------------------------
         Language DropDown
---------------------------------*/
.dropdown {
    position: absolute;
    display: inline-block;
  }

  #languageBtn {
    position: absolute;
    right: 5%;
    background: none;
    border: none;
  }

  #languageBtn img {
    width: 64px;
    height: 64px;
  }
  
  .dropdown-content {
    display: none;
    border-radius: 18px;
    background-color: #414b4d;
    z-index: 1;
  }
  
  .dropdown-content a {
    color: rgb(255, 255, 255);
    padding: 10px 10px;
    border-radius: 18px;
    font-size: 15px;
    text-decoration: none;
    display: block;
  }

  .dropdown-content a:hover {background-color: rgb(41, 41, 41);}
  .dropdown:pressed .dropdown-content {display: block;}
  .dropdown .dropdown-content button {
      display: block;
  }

  .footer {
      position: absolute;
      bottom: 15px;
      display: flex;
      justify-content: flex-end;
      width: 100%;
  }

  .footer button:hover {
      background: none;
  }

  .footer a {
      position: relative;
      /* margin-left: auto; */
      margin-right: 50px;
  }
/*---------------------------------
         Settings Menu Display
---------------------------------*/
.menu {
    position: absolute;
    overflow: hidden;
    min-height: 200px;
    max-width: 768px;
    border: 5px solid #000;
    border-radius: 50px 50px 50px 50px;
    box-shadow: inset 0 -1px 10px 3px #6d6d6d;
    font-size: 38px;
    cursor: move;
    z-index: 9999;
}

.taskHelp {
    font-size: 17px;
    margin: 5px 0px;
    padding-left: 18px;
    padding-right: 15px;
}

.menuLight {
    background-color: white;
    background-image: -webkit-gradient(linear, left bottom, left top, from(#eee), to(#fff));
    background-image: linear-gradient(0deg, #eee, #fff);
}

 #settingsMenuHeader {
    padding: 10px;
    height: 15px;
    cursor: move;
}

#taskMenuHeader {
    padding: 10px;
    height: 15px;
    cursor: move;
}

.headerDark {
    background-color: rgb(85, 85, 85);
    background-image : url("img/drag-lines.png");
    /* background-size: cover; */
    background-position: center;
    background-repeat: no-repeat;
}

.headerLight {
    background-color: #333;
}

.menu p {
    margin-top: 10px;
    margin-bottom: 20px;
}

.close {
    position: absolute;
    left: auto;
    top: 60px;
    right: 0%;
    bottom: auto;
    padding-right: 20px;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
    color: black;
    margin-right: 20px;
}

button {
    margin: 0 10px;
    padding: 10px 15px;
    border: 2px solid #000;
    border-radius: 50px;
    background-color: #333;
    /* background-color: #999; For dark mode */
    font-size: 24px;
    font-weight: bold;
    color: #fff;
    cursor: pointer;
}

.darkButton {
    background-color: #999;
}

button:hover {
    background-color: rgb(100, 100, 100);
}

.userInputContainer {
    margin: 20px 20px 20px 20px;
    padding-left: 25px;
    padding-right: 15px;
    padding-bottom: 20px;
    max-width: 350px;
    text-align: right;
}

.fieldLabel {
    font-size: 24px;
}

input {
    text-align: center;
    font-size: 20px;
}
.customTime {
    width: 60px;
}

#volume {
    display: inline-block;
    width: 75px;
}

#volumeIcon {
    display: inline-block;
    width: 40px;
    margin-right: 20px;
    vertical-align: middle;
    cursor: pointer;
}

.userInputContainer div {
    display: block;
}

.userInputContainer input {
    border-radius: 20px;
    border-style: solid black;
    border-width: 5px;
}

.userInputContainer p {
    display: inline;
    margin: 0 -10px;
}


#langContainer button {
    /* background: none;
    border: none; */
    padding: 0;
    font-size: 0.4em;
    color: black;

}

/* @media screen and (max-width: 768px) {
    menu {
        width: 100vw;
    }
} */
@media screen and (max-width: 479px) {
    .menu {
        top: 50%;
        width: 100%;
    }

    #prompt {
        width: 100%;
    }
    .userInputContainer input {
        font-size: 24px;
    }

    .userInputContainer p {
        margin: 0 -10px;
    }
}
/*---------------------------------
         Task Menu Display
---------------------------------*/
#deleteAll {
    position: absolute;
    left: 0%;
    top: 60px;
    right: auto;
    bottom: auto;
    padding-left: 20px;
    color: red;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
}

#taskListContainer {
    max-height: 400px;
    overflow-y: scroll;
    cursor: auto;
    margin: 15px;
}

#closeTasks{
    top: 60px;
}

#taskTitle {
    font-size: 30px;
}

.userTask {
    text-align: left;
    display: flex;
    margin: auto;
    max-height: 60px;
}

.markCircle {
    min-width: 30px;
    margin-left: 10px;
    display: block;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    cursor: pointer;
    /* background-color: black; */
}

.markLight {
    border: 5px solid black;
}

.markDark {
    border: 5px solid white;
}

.markFill {
    background-color: yellow;
}


.userTask img {
    display: inline-block;
    height: 30px;
    cursor: pointer;
    margin: 4px;
}

.userTask p {
    display: inline;
    font-size: 25px;
    margin-left: 12px;
    margin-bottom: 15px;
    margin-top: 7px;
}

@media screen and (max-width: 768px) {
    .tasksTitle {
        font-size: 20px;
    }
    .taskHelp {
        font-size: 17px;
        margin: 5px 0px;
        padding-left: 18px;
        padding-right: 15px;
    }
}

#mainTasks {
    margin: 0 auto;
    max-width: 768px;
    max-height: 28vh;
    overflow-y: scroll;
}

#confirmMessage {
    margin: 20px 10px;
}

#prompt {
    position: absolute;
    top: 50%;
    left: 0%;
    right: 0%;
    margin-top: -150px;
    padding-top: 15px;
    padding-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
    min-height: 150px;
    max-width: 768px;
    border: 5px solid #000;
    border-radius: 50px 50px 50px 50px;
    box-shadow: inset 0 -1px 10px 3px #6d6d6d;
    font-size: 28px;
}

/* additional spacing and alignment */
#chooseTheme{
    line-height: 0.5;
}

#chooseTheme button{
    font-size: 18px;
    margin: 0 0;
}

#cycle1 {
    position: absolute;
    top: 55%;
    right: 15%;
    display: none;
}
#cycle2 {
    position: absolute;
    top: 65%;
    left: 15%;
    display: none;
}

#cycle3 {
    position: absolute;
    top: 70%;
    right: 22%;
    display: none;
}
#cycle0 {
    position: absolute;
    top: 50%;
    left: 20%;
}

.transparent {
    background: none;
    border: none;
    padding: 0;
}

.transparent:hover {
    background: none;
}

